# sphinxcontrib-hexdump

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-testpypi.yml  publish.yml
docs/: conf.py  index.rst  usage.rst
docs/artifacts/: sample.any
src/sphinxcontrib/hexdump/: __init__.py  directive.py
tests/: test_html.py  test_latex.py
tests/roots/test-basic/: conf.py  index.rst
tests/roots/test-basic/_build/doctrees/: environment.pickle  index.doctree
tests/roots/test-basic/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
tests/roots/test-basic/_build/latex/: test-basic.tex
